---
id: 22e4e7b4-6f41-4f97-840d-00233f48d050
---
erDiagram
    %% Relations
    PATIENTS ||--o{ VITAL_RECORDS : "has vitals"
    PATIENTS ||--o{ PREDICTIONS : "predicted risk"

    %% Entities
    USERS {
        int id PK
        string username
        string password_hash
        enum role "admin, doctor, nurse"
    }

    PATIENTS {
        int id PK
        string mrn "Medical Record Number (Unique)"
        float birth_weight_g "Important for SNAPPE-II"
        int gestational_age_weeks "Important for SNAPPE-II (SGA)"
    }

    %% High Frequency & Anthropometry (Real-time Scale Data)
    VITAL_RECORDS {
        bigint id PK
        int patient_id FK
        datetime recorded_at "Timestamp"
        float weight_grams "Sensor: HX711"
        float length_cm "Sensor: HC-SR04"
        float temperature_celsius "Sensor: MLX90614 (Infrared)"
        int heart_rate_bpm "Sensor: GY-MAX30102"
        int spo2_percent "Sensor: GY-MAX30102"
    }

    %% AI Model Outputs & SNAPPE-II Inputs
    PREDICTIONS {
        bigint id PK
        int patient_id FK
        datetime predicted_at
        float mean_blood_pressure "SNAPPE Input"
        float lowest_ph "SNAPPE Input"
        float po2_fio2_ratio "SNAPPE Input"
        boolean seizures "SNAPPE Input"
        float urine_output_ml_kg_hr "SNAPPE Input"
        int apgar_score_5min "SNAPPE Input"
        float snappe_score "0-162"
        float mortality_risk_prob "0.0 - 1.0"
        enum risk_level "Low, Moderate, High"
    }